fix the navbar overflow in mobile screen

--- a/src/components/BannerHero/BannerHero.scss
+++ b/src/components/BannerHero/BannerHero.scss
@@ -123,4 +123,12 @@
       visibility: hidden;
     }
   }
+
+  .lateralBar{
+    margin-right: 0 ;
+
+    img{
+      margin: 0 3px !important;
+    }
+  }
 }
