--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  width: 100%;
+  width: 100vw;
   padding: 1.5rem 4rem;
   display: flex;
   justify-content: space-between;
@@ -77,6 +77,7 @@
 @media screen and (max-width: 610px) {
   .navbar {
     padding: 1.5rem;
+    overflow: hidden;
   }
 
   .navbar__auth {
