--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   font-family: "Poppins";
   margin:0;
   padding:0;
-  overflow: hidden;
 }
 
 ul {
